--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 ### your site title here
 
-title: Your Name
-description: subtitle | affiliations | motto
+title: Derek Manns
+description: My Portfolio | UCF | Clever Games are Cleverly Made
 
-baseurl: /gradfolio #name of GitHub repository
+baseurl: /phdderek #name of GitHub repository
 url: "" #custom url to be used instead of GitHub repository
 email: #
 
@@ -13,14 +13,14 @@ permalink: /blog/:year/:title/
 paginate_path: /blog/page:num/
 
 # Social media links in footer
-twitter: "#"
+twitter: "GameDesignDude"
 linkedin: "#"
 stackoverflow: "#"
 github: "#"
 researchgate: "#"
 orcid: "#"
 quora: "#"
-instagram: "#"
+instagram: "GameDesignDude"
 facebook: "#"
 
 
