--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: Derek Manns
 description: My Portfolio | UCF | Clever Games are Cleverly Made
 
-baseurl: /phdderek #name of GitHub repository
+baseurl: /gradfolio #name of GitHub repository
 url: "" #custom url to be used instead of GitHub repository
 email: #
 
