--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### your site title here
 
 title: Derek Manns
-description: My Portfolio | UCF | Clever Games are Cleverly Made
+description: My Portfolio | UCF | Where Clever Games are Cleverly Made
 
 baseurl: /gradfolio #name of GitHub repository
 url: "" #custom url to be used instead of GitHub repository
