--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ paginate_path: /blog/page:num/
 twitter: "GameDesignDude"
 linkedin: "#"
 stackoverflow: "#"
-github: "#"
+github: "GameDesignDude"
 researchgate: "#"
 orcid: "#"
 quora: "#"
