--- a/_config.yml
+++ b/_config.yml
@@ -48,12 +48,12 @@ collections:
     output: true
     permalink: /projects/:name/
     order:
-      - shortProject.md
-      - longerProjectTitle.md
-      - redirect.md
-      - project4.md
-      - project5.md
-      - project6.md
+      - bitsy.md
+      - borksy.md
+      - discord.md
+      - scalar.md
+      - twine.md
+      - twitterbot.md
 
 sass:
   sass_dir: /assets/css/_sass
