--- a/.hintrc
+++ b/.hintrc
@@ -4,6 +4,27 @@
   ],
   "hints": {
     "manifest-app-name": "off",
-    "apple-touch-icons": "off"
+    "apple-touch-icons": "off",
+    "axe/language": [
+      "default",
+      {
+        "html-has-lang": "off"
+      }
+    ],
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "-webkit-overflow-scrolling"
+        ]
+      }
+    ],
+    "no-inline-styles": "off",
+    "axe/name-role-value": [
+      "default",
+      {
+        "link-name": "off"
+      }
+    ]
   }
 }
