--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### your site title here
 
 title: Derek Manns
-description: Ph.D. Student | UCF | Game & Level Designer and Professor
+description: Ph.D. Candidate | UCF | Game & Level Designer and Professor
 
 baseurl: /gradfolio #name of GitHub repository
 url: "" #custom url to be used instead of GitHub repository
